# editor

./: App.vue  index.html  main.ts  package-lock.json  package.json  style.css  tailwind.config.js  template_server.py
components/: AIConfigModal.vue  RemoteTemplates.vue  TemplateUploadModal.vue
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ConfigModal.vue  RemoteTemplates.vue
src/views/: CodeHubAssistant.vue  DesignStudio.vue  MetricsDashboard.vue
views/: CodeHubAssistant.vue  DesignStudio.vue  MetricsDashboard.vue
