[package]
name = "zilv"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "window-all", "path-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
